Worked on Classes, Heroes & a bit on Terrains.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -54,8 +54,11 @@
 <h3>Castle</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Life"</li>
-	<li>Magic Affiliations:+Life,Spirit / -Death</li>
+	<li>Alignment: "Progress"</li>
+	<li>Territories Represented: Erathia</li>
+	<li>Magic Affiliations:+Life, Spirit / -Death</li>
+	<li>Native Terrains: Grass, Dirt</li>
+	<li>Native Heroes: Paladin, Priest</li>
 	<li><em>Updates:</em> Res silo should now produce +1gem/day instead of 1wd/1ore, Swordsmen are now lvl3, Griffins
 	    lvl4</li>
 	<li>Ultimate: War Memorial (name?) - +2 morale to all allied Castle-native heroes, +1 to all other allied heroes.
@@ -79,10 +82,10 @@
 <h4>Creatures</h4>
 <ol>
 	<li>Pikemen/Halberdiers (immune to Cav jousting bonus)</li>
-	<li>Archers/Marksmen (ranged, 12 shots (+12 for upg.), upg. shoots twice per turn)</li>
+	<li>Crossbowmen/Arbalesters (ranged, 12 shots (+12 for upg.), upg. shoots twice per turn)</li>
 	<li>Swordsmen/Veteran Swordsmen (+morale gives +1 luck (on upg, +3 or more morale gives +2 luck))</li>
 	<li>Griffins/Battle Griffins (flying, 3 retaliations (unlimited for upg.))</li>
-	<li>Monks/Zealots (ranged, 24 shots, punch for melee, no melee penalty, ranged attack does extra against the
+	<li>Devotees/Zealots (ranged, 24 shots, punch for melee, no melee penalty, ranged attack does extra against the
 			undead)</li>
 	<li>Cavaliers/Hussars (jousting bonus)</li>
 	<li>Angels/Archangels (flying, hates devils, morale+1 (upg. casts res once per combat, Mas lv, pwr=stack #))</li>
@@ -90,8 +93,11 @@
 <h3>Rampart</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Life"</li>
+	<li>Alignment: "Progress"</li>
 	<li>Magic Affiliations: +Earth, Mind / -Body</li>
+	<li>Territories Represented: AvLee, Tularea</li>
+	<li>Native Terrains: Grass, Dirt</li>
+	<li>Native Heroes: Ranger, Druid (rename to Shaman?)</li>
 	<li><em>Updates:</em> Dendroids way down to 2, Dwarves to 4 & Pegasi to 5.</li>
 	<li>Ultimate: Spirit Guardian - +2 Luck to all native allied heroes, +1 to other allied heroes. Raises luck cap
 			to +4 at Mas Luck instead of GM.</li>
@@ -115,7 +121,7 @@
 <ol>
 	<li>Centaur Lancers/Centaur Gallopers(?)</li>
 	<li>Dendroid Sentries/Dendroid Soldiers (Animated, Living, slowing roots)</li>
-	<li>Elf Archers/Elf Rangers (ranged, 24 shots, upg. shoots 2x per turn)</li>
+	<li>Elf Archers/Elf Marksmen (ranged, 24 shots, upg. shoots 2x per turn)</li>
 	<li>Dwarven Warriors (ranged attacks/spells downgraded 1 Crit category (2 when defensive stance taken))</li>
 	<li>Pegasus Fencers/Pegasus Cuirassiers (magic damping, upg. has strike-and-return (alt))</li>
 	<li>Unicorns/War Unicorns (aura of magic resist to army, chance to Pacify1 on atk (upg. Pacify2))</li>
@@ -124,8 +130,11 @@
 <h3>Tower</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Good"</li>
+	<li>Alignment: "Progress"</li>
 	<li>Magic Affiliations: +Air, Water / -Earth</li>
+	<li>Territories Represented: Bracada</li>
+	<li>Native Terrains: Desert (formerly Rough), Snow</li>
+	<li>Native Heroes: Wizard, Mechanic (formerly Alchemist)</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -155,8 +164,11 @@
 <h3>Stronghold</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Nature"</li>
+	<li>Alignment: "Natural Harmony"</li>
+	<li>Territories Represented: Krewlod</li>
 	<li>Magic Affiliations: +Fire, Spirit / -Air</li>
+	<li>Native Terrains: </li>
+	<li>Native Heroes: Barbarian, Battle Mage</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -186,8 +198,11 @@
 <h3>Fortress</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Nature"</li>
+	<li>Alignment: "Natural Harmony"</li>
+	<li>Territories Represented: Tatalia</li>
 	<li>Magic Affiliations: +Earth, Water / -Fire</li>
+	<li>Native Terrains: Swamp, Mud (Dirt in rain), Bog (Grass in Rain)</li>
+	<li>Native Heroes: Beastkeeper, Witch</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -217,8 +232,11 @@
 <h3>Conflux</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Nature"</li>
+	<li>Alignment: "Natural Harmony"</li>
+	<li>Territories Represented: Elemental Planes</li>
 	<li>Magic Affiliations: +Air, Earth, Fire, Water / -Life, Death</li>
+	<li>Native Terrains: none, neither penalty nor bonus on any</li>
+	<li>Native Heroes: Elementalist, Planeswalker (names?)</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -258,8 +276,11 @@
 <h3>Inferno</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Death"</li>
+	<li>Alignment: "Destruction"</li>
+	<li>Territories Represented: Kreegan lands</li>
 	<li>Magic Affiliations: +Fire, Body / -Water</li>
+	<li>Native Terrains: Lava, Desert</li>
+	<li>Native Heroes: Demoniac, Heretic</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -293,8 +314,11 @@
 <h3>Necropolis</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment - "Death"</li>
+	<li>Alignment - "Destruction"</li>
+	<li>Territories Represented: Deyja</li>
 	<li>Magic Affiliations: +Spirit, Death / -Life</li>
+	<li>Native Terrains: Desert, Subterranean</li>
+	<li>Native Heroes: Death Knight, Necromancer</li>
 	<li><em>Updates:</em> Dread Knights out (too similar to the hero class), Zombies-Liches promoted 1lvl each,
 												Skeleton Archers added at Lvl2. Huge changes to necromancy (see Death Magic)</li>
 	<li>Ultimate: </li>
@@ -325,8 +349,11 @@
 <h3>Dungeon</h3>
 <h4>General Info</h4>
 <ul>
-	<li>Alignment: "Death"</li>
+	<li>Alignment: "Destruction"</li>
+	<li>Territories Represented: Nighon</li>
 	<li>Magic Affiliations: +Air, Mind / -Spirit</li>
+	<li>Native Terrains: Subterranean, Lava</li>
+	<li>Native Heroes: Warlock, Overlord</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
