--- a/Races.html
+++ b/Races.html
@@ -92,5 +92,50 @@
   <li>Ether Knight</li>
   <li>Fear</li>
 </ul>
+<h2>Classes/Jobs</h2>
+<p>Five categories: All-Might, Might-focused, Balanced, Magic-focused, All-Magic</p>
+<h3>All-Might:</h3>
+<ul>
+  <li>Fighter (Basic)</li>
+  <li>Knight</li>
+  <li>Barbarian</li>
+  <li>Rogue</li>
+  <li>Beastkeeper</li>
+</ul>
+<h3>Might-Focused</h3>
+<ul>
+  <li> (Basic)</li>
+  <li>Ranger</li>
+  <li>Paladin</li>
+  <li>Archer</li>
+  <li>Overlord</li>
+  <li>Demoniac</li>
+</ul>
+<h3>Balanced</h3>
+<ul>
+  <li>Initiate (Basic)</li>
+  <li>Battle Mage</li>
+  <li>Monk</li>
+  <li>Planeswalker</li>
+  <li>Death Knight</li>
+  <li>Mechanic</li>
+</ul>
+<h3>Magic-Focused</h3>
+<ul>
+  <li>Cleric (Basic)</li>
+  <li>Heretic</li>
+  <li>Priest</li>
+  <li>Elementalist</li>
+  <li>Witch</li>
+  <li>Herbalist</li>
+</ul>
+<h3>All-Magic</h3>
+<ul>
+  <li>Sorcerer (Basic)</li>
+  <li>Warlock</li>
+  <li>Wizard</li>
+  <li>Necromancer</li>
+  <li>Druid</li>
+</ul>
 </body>
 </html>
