Tinkering with status, creatures, races, jobs & skills. Need to change Spells to fit statuses.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -58,7 +58,7 @@
 	<li>Territories Represented: Erathia</li>
 	<li>Magic Affiliations:+Life, Spirit / -Death</li>
 	<li>Native Terrains: Grass, Dirt</li>
-	<li>Native Heroes: Paladin, Priest</li>
+	<li>Native Heroes: Knight, Cleric</li>
 	<li><em>Updates:</em> Res silo should now produce +1gem/day instead of 1wd/1ore, Swordsmen are now lvl3, Griffins
 	    lvl4</li>
 	<li>Ultimate: War Memorial (name?) - +2 morale to all allied Castle-native heroes, +1 to all other allied heroes.
@@ -82,11 +82,11 @@
 <h4>Creatures</h4>
 <ol>
 	<li>Pikemen/Halberdiers (immune to Cav jousting bonus)</li>
-	<li>Crossbowmen/Arbalesters (ranged, 12 shots (+12 for upg.), upg. shoots twice per turn)</li>
+	<li>Crossbowmen/Arbalesters (ranged, 12 shots (+12 for upg.), upg. shoots heavy bolt, increased dmg)</li>
 	<li>Swordsmen/Veteran Swordsmen (+morale gives +1 luck (on upg, +3 or more morale gives +2 luck))</li>
 	<li>Griffins/Battle Griffins (flying, 3 retaliations (unlimited for upg.))</li>
-	<li>Devotees/Zealots (ranged, 24 shots, punch for melee, no melee penalty, ranged attack does extra against the
-			undead)</li>
+	<li>Acolytes/Fanatics (ranged, 24 shots, punch for melee, no melee penalty, ranged attack does extra against the
+			undead, can target own units for heal as well.)</li>
 	<li>Cavaliers/Hussars (jousting bonus)</li>
 	<li>Angels/Archangels (flying, hates devils, morale+1 (upg. casts res once per combat, Mas lv, pwr=stack #))</li>
 </ol>
@@ -97,7 +97,7 @@
 	<li>Magic Affiliations: +Earth, Mind / -Body</li>
 	<li>Territories Represented: AvLee, Tularea</li>
 	<li>Native Terrains: Grass, Dirt</li>
-	<li>Native Heroes: Ranger, Druid (rename to Shaman?)</li>
+	<li>Native Heroes: Hunter, Druid</li>
 	<li><em>Updates:</em> Dendroids way down to 2, Dwarves to 4 & Pegasi to 5.</li>
 	<li>Ultimate: Spirit Guardian - +2 Luck to all native allied heroes, +1 to other allied heroes. Raises luck cap
 			to +4 at Mas Luck instead of GM.</li>
@@ -119,10 +119,10 @@
 </ul>
 <h4>Creatures</h4>
 <ol>
-	<li>Centaur Lancers/Centaur Gallopers(?)</li>
-	<li>Dendroid Sentries/Dendroid Soldiers (Animated, Living, slowing roots)</li>
-	<li>Elf Archers/Elf Marksmen (ranged, 24 shots, upg. shoots 2x per turn)</li>
+	<li>Halfling Slingers/Halfling Guerillas (ranged, tougher than H3C)</li>
+	<li>Centaur Lancers/Centaur Stampeders (jousting bonus)</li>
 	<li>Dwarven Warriors (ranged attacks/spells downgraded 1 Crit category (2 when defensive stance taken))</li>
+	<li>Elf Archers/Elf Rangers (ranged, 24 shots, both shoot 2x per turn)</li>
 	<li>Pegasus Fencers/Pegasus Cuirassiers (magic damping, upg. has strike-and-return (alt))</li>
 	<li>Unicorns/War Unicorns (aura of magic resist to army, chance to Pacify1 on atk (upg. Pacify2))</li>
 	<li>Green Dragons/Gold Dragons (Flying, breath atk (alt), high magic resistance (upg. very high))</li>
@@ -168,7 +168,7 @@
 	<li>Territories Represented: Krewlod</li>
 	<li>Magic Affiliations: +Fire, Spirit / -Air</li>
 	<li>Native Terrains: </li>
-	<li>Native Heroes: Barbarian, Battle Mage</li>
+	<li>Native Heroes: Barbarian, Warrior Mage</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -189,7 +189,7 @@
 <ol>
 	<li>Goblin Infantry</li>
 	<li>Orc Axe Throwers (moved down)</li>
-	<li>Goblin Wolf Riders (moved up)</li>
+	<li>Wolves (moved up, replaces wolf riders)</li>
 	<li>Ogres (spec into either warriors or magi)</li>
 	<li>Rocs</li>
 	<li>Cyclopses</li>
@@ -202,7 +202,7 @@
 	<li>Territories Represented: Tatalia</li>
 	<li>Magic Affiliations: +Earth, Water / -Fire</li>
 	<li>Native Terrains: Swamp, Mud (Dirt in rain), Bog (Grass in Rain)</li>
-	<li>Native Heroes: Beastkeeper, Witch</li>
+	<li>Native Heroes: Beastkeeper, Shaman</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -236,7 +236,7 @@
 	<li>Territories Represented: Elemental Planes</li>
 	<li>Magic Affiliations: +Air, Earth, Fire, Water / -Life, Death</li>
 	<li>Native Terrains: none, neither penalty nor bonus on any</li>
-	<li>Native Heroes: Elementalist, Planeswalker (names?)</li>
+	<li>Native Heroes: Elementalist, Herbalist (?)</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -258,7 +258,7 @@
 <h4>Creatures</h4>
 <ol>
 	<li>Sprites</li>
-	<li>Air - Wisps (fastish frail flyers); Water - Tritons (medium speed sturdy melee); Fire - Salamanders (medium
+	<li>Air - Wisps (fastish frail high dmg); Water - Tritons (medium speed sturdy melee); Fire - Salamanders (medium
 			speed tankyish melee); Earth - Rock Beasts (new, doglike, medium fast, tanky, technical but lower damage)</li>
 	<li>Air - Hawkppl (medium fast sturdier ranged (throw axes)); Water - Acid Spitters (new, ranged, med dmg technical);
 			Fire - Warden of Fire (Use MM7 name but separate from Elementals, new design, ranged); Earth - Boulders
@@ -267,9 +267,10 @@
 			Efreet (fast med dmg flyers); Earth - Mudmen (new, med fast, teleporting (by disappearing  into the ground, only
 			works on land), technical high dmg)</li>
 	<li>Air - Air Elementals; Water - Water Elementals; Fire - Fire Elementals; Earth - Earth Elementals</li>
-	<li>Air - Storm Elementals; Water - Ice Elementals; Fire - Pyre Elementals (renamed version of Energy; Earth -
-			Magma Elementals</li>
-	<li>Air - Cloud Defenders (new, Titan-like, fast flying high dmg); Water - Dragon Turtles (slow, very tanky,
+	<li>Air - Storm Elementals (no longer ranged); Water - Ice Elementals; Fire - Pyre Elementals (renamed version
+			of Energy; Earth -
+			Stone Elementals</li>
+	<li>Air - Cloud Defenders (new, Titan-like, fast ranged high dmg); Water - Dragon Turtles (slow, very tanky,
 			high  single melee damage); Fire - Firebirds (blazing fast semi-frail flyers); Earth - Demolishers (medium
 			speed, medium aoe damage, tanky)</li>
 </ol>
@@ -280,7 +281,7 @@
 	<li>Territories Represented: Kreegan lands</li>
 	<li>Magic Affiliations: +Fire, Body / -Water</li>
 	<li>Native Terrains: Lava, Desert</li>
-	<li>Native Heroes: Demoniac, Heretic</li>
+	<li>Native Heroes: Demon General, Summoner</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -353,7 +354,7 @@
 	<li>Territories Represented: Nighon</li>
 	<li>Magic Affiliations: +Air, Mind / -Spirit</li>
 	<li>Native Terrains: Subterranean, Lava</li>
-	<li>Native Heroes: Warlock, Overlord</li>
+	<li>Native Heroes: Sorcerer, Dungeonkeeper</li>
 	<li><em>Updates:</em> </li>
 	<li>Ultimate: </li>
 	<li><strong>Uniques</strong></li>
@@ -376,25 +377,25 @@
 	<li>Troglodytes</li>
 	<li>Harpies</li>
 	<li>Beholders</li>
+	<li>Minotaur Grunts</li>
+	<li>Medusa Archers</li>
 	<li>Manticores</li>
-	<li>Medusas</li>
-	<li>Minotaurs</li>
 	<li>Dragons (Red/Black)</li>
 </ol>
 <h2>Neutral Creatures</h2>
 <ul>
-	<li>Halfling - L1</li>
 	<li>Boar - L2</li>
 	<li>Rogue - L2</li>
 	<li>Mummy - L3 (Undead)</li>
 	<li>Nomad - L3</li>
 	<li>Sharpshooter - L4</li>
+	<li>Dendroid Sentries - L5 (Animated, Living, slowing roots)</li>
 	<li>Troll - L5</li>
-	<li>Gold Golem - L5 (Animated, Non-living)</li>
-	<li>Crystal Golem - L6 (formerly Diamond golem)</li>
+	<li>Gold Golem - L4 (Animated, Non-living)</li>
+	<li>Crystal Golem - L5 (formerly Diamond golem)</li>
 	<li>Enchanter - L6</li>
-	<li>Faerie Dragon - L8</li>
-	<li>Rust Dragon - L9</li>
+	<li>Faerie Dragon - L7</li>
+	<li>Rust Dragon - L8</li>
 	<li>Crystal Dragon - L9</li>
 	<li>Azure Dragon - L10</li>
 </ul>
