--- a/Races.html
+++ b/Races.html
@@ -40,7 +40,8 @@
   <li>Minotaur</li>
   <li>Halfling</li>
   <li>Troll</li>
-  <li>Wolfman</li>
+  <li>Wolfman (were-hybrid)</li>
+  <li>Ratman(were-hybrid)</li>
 </ul>
 <h3>Beasts / Non-Humanoid</h3>
 <ul>
@@ -93,49 +94,52 @@
   <li>Fear</li>
 </ul>
 <h2>Classes/Jobs</h2>
-<p>Five categories: All-Might, Might-focused, Balanced, Magic-focused, All-Magic</p>
+<p>Five categories: All-Might, Might-focused, Balanced, Magic-focused, All-Magic. First is chosen specialization:
+   depends on region, skills, stats. Beyond that are honorific titles akin to 2nd promotions in MM7C. Unlike MM7C,
+   skill masteries should only be gated behind achieving 1st specialization, 2nd should be specialty focus, stat
+   growth & honor. In RPG, chars pick 1 of 5 basic paths to start in, then progress to a specialty by skill choice &
+   accomplishing a quest. Choosing 1 path locks out all others for actual promotion, but quest xp can be gained &
+   "honorary" titles as well like MMC. In TBS, all heroes start at first specialties & can progress to 2nd via
+   experience.</p>
 <h3>All-Might:</h3>
 <ul>
   <li>Fighter (Basic)</li>
-  <li>Knight</li>
-  <li>Barbarian</li>
-  <li>Rogue</li>
-  <li>Beastkeeper</li>
+  <li>Knight - Champion or Paladin</li>
+  <li>Barbarian - Tribal Chieftan or Warlord</li>
+  <li>Rogue - Spy or Assassin</li>
+  <li>Beastkeeper - Land Defender</li>
 </ul>
 <h3>Might-Focused</h3>
 <ul>
-  <li> (Basic)</li>
-  <li>Ranger</li>
-  <li>Paladin</li>
-  <li>Archer</li>
-  <li>Overlord</li>
-  <li>Demoniac</li>
+  <li>Ranger (Basic)</li>
+  <li>Hunter - Marksman or Sniper</li>
+  <li>Dungeonkeeper - Overlord</li>
+  <li>Demon General - Demon Lord</li>
+  <li>Mechanic - Engineer</li>
 </ul>
 <h3>Balanced</h3>
 <ul>
   <li>Initiate (Basic)</li>
-  <li>Battle Mage</li>
-  <li>Monk</li>
-  <li>Planeswalker</li>
-  <li>Death Knight</li>
-  <li>Mechanic</li>
+  <li>Monk - Zealot or Ninja</li>
+  <li>Warrior Mage - Battle Mage</li>
+  <li>Death Knight - Dread Knight</li>
+  <li>Herbalist - Alchemist</li>
 </ul>
 <h3>Magic-Focused</h3>
 <ul>
-  <li>Cleric (Basic)</li>
-  <li>Heretic</li>
-  <li>Priest</li>
-  <li>Elementalist</li>
-  <li>Witch</li>
-  <li>Herbalist</li>
+  <li>Acolyte (Basic)</li>
+  <li>Summoner - Heretic</li>
+  <li>Cleric - Priest of Life</li>
+  <li>Shaman - Witch</li>
+  <li>Elementalist - Planeswalker</li>
 </ul>
 <h3>All-Magic</h3>
 <ul>
-  <li>Sorcerer (Basic)</li>
-  <li>Warlock</li>
-  <li>Wizard</li>
-  <li>Necromancer</li>
-  <li>Druid</li>
+  <li>Mage (Basic)</li>
+  <li>Sorcerer - Warlock</li>
+  <li>Wizard - Archmage</li>
+  <li>Necromancer - Grand Necromancer or High Lich</li>
+  <li>Druid - Grand Druid</li>
 </ul>
 </body>
 </html>
