--- a/Skills.html
+++ b/Skills.html
@@ -65,9 +65,10 @@
 </ul>
 <h3>List of Secondary Skills</h3>
 <h4>Weapon Skills</h4>
+<p>One of the main points of basing this all off of</p>
 <ul>
   <li>Axe - Stats: Mgt main / End aux</li>
-  <li>Blaster - Acc aux (lowest bar to entry)</li>
+  <li>Blaster - Acc aux (lowest bar to entry, but Mas/GM have main requirements)</li>
   <li>Bow - Acc main / Spd main</li>
   <li>Dagger - Spd main / Acc aux</li>
   <li>Mace - Mgt main / End aux</li>
@@ -80,6 +81,7 @@
 <h4>Armor Skills</h4>
 <ul>
   <li>Leather - End aux / Spd aux (dual aux for low bar to entry)</li>
+  <li>Old: +1 AC/lvl  - No RecovPen - extra +1 AC/lvl (+2 total) - </li>
   <li>Chain - End main / Spd aux</li>
   <li>Plate - End main / Mgt aux</li>
   <li>Dodging - Spd main / Lck aux</li>
