--- a/Status.html
+++ b/Status.html
@@ -20,14 +20,12 @@
 <table>
   <tr><th>Base Name</th><th>Associated Magic</th><th>Level 1 Wording</th><th>Level 2 Wording</th>
       <th>Level 3 Wording</th></tr>
-  <tr><td>Impaired Sight</td><td>Fire</td><td>Vision Impaired</td><td>Vision Eliminated (?)</td></tr>
-  <tr><td>Sleep</td><td>Water</td><td>Drowsy</td><td>Very Tired</td><td>Asleep</td></tr>
-  <tr><td>Stun</td><td>Body</td><td>Stunned</td><td>Bashed (?)</td><td>Immobilized</td></tr>
-  <tr><td>Poison</td><td>Body</td><td>Slightly Poisoned</td><td>Strongly Poisoned</td><td>Envenomed</td></tr>
+  <tr><td>Shock</td><td>Air</td><td>Zapped</td><td>Shocked</td><td>Electrified</td></tr>
+  <tr><td>Stun</td><td>Earth</td><td>Stunned</td><td>Bashed (?)</td><td>Immobilized</td></tr>
+  <tr><td>Sight</td><td>Fire</td><td>Sight Obscured</td><td>Sight Impaired</td><td>Sight Eliminated (?)</td></tr>
+  <tr><td>Poison</td><td>Water</td><td>Slightly Poisoned</td><td>Strongly Poisoned</td><td>Envenomed</td></tr>
   <tr><td>Disease</td><td>Body</td><td>Sick</td><td>Ill</td><td>Diseased</td></tr>
   <tr><td>Fear</td><td>Mind</td><td>Afraid</td><td>Intimidated</td><td>Terrified</td></tr>
-  <tr><td>Pacification</td><td>Mind</td><td>Calmed</td><td>Pacified</td><td>Comlpetely Docile</td></tr>
-  <tr><td>Sanity</td><td>Mind</td><td>Loopy (?)</td><td>Crazy (?)</td><td>Deranged (?)</td></tr>
   <tr><td>Curse</td><td>Spirit</td><td>Jinxed</td><td>Cursed</td><td>Hexed</td></tr>
   <tr><td>Fatigue</td><td>Life/Death</td><td>Weary</td><td>Fatigued</td><td>Completely Drained</td></tr>
 </table>
