Added Crafting, tinkered more with other stuff.

--- a/Castles_and_Creatures.html
+++ b/Castles_and_Creatures.html
@@ -68,7 +68,7 @@
 	<li>Griffin Bastion: +3 Griffins/wk, requires Griffin Tower, 1000gd+5ore</li>
 	<li>Stables: +400 movepts to visiting hero for 1wk, 2000gd+10wd, requires Barracks & Town Hall</li>
 	<li>Quarry Guild: up to +2 ore from ore pits/day (+1 per ore pit per quarry guild, each ore pit can be boosted
-			to a max of 4/day), 2000gd+5ore</li>
+			to a max of 4/day), requires City Hall, 2000gd+5ore</li>
 	<li><strong>Dwellings</strong></li>
 	<li>Guardhouse: 250g+5o/1000g+5o, requires Fort</li>
 	<li>Archers' Tower: 500g5w5o/1000g5w5o, requires Guardhouse</li>
@@ -83,7 +83,7 @@
 <ol>
 	<li>Pikemen/Halberdiers (immune to Cav jousting bonus)</li>
 	<li>Crossbowmen/Arbalesters (ranged, 12 shots (+12 for upg.), upg. shoots heavy bolt, increased dmg)</li>
-	<li>Swordsmen/Veteran Swordsmen (+morale gives +1 luck (on upg, +3 or more morale gives +2 luck))</li>
+	<li>Swordsmen/Veteran Swordsmen (+2 morale gives +1 luck (on upg, +3 or more morale gives +2 luck))</li>
 	<li>Griffins/Battle Griffins (flying, 3 retaliations (unlimited for upg.))</li>
 	<li>Acolytes/Fanatics (ranged, 24 shots, punch for melee, no melee penalty, ranged attack does extra against the
 			undead, can target own units for heal as well.)</li>
@@ -98,33 +98,33 @@
 	<li>Territories Represented: AvLee, Tularea</li>
 	<li>Native Terrains: Grass, Dirt</li>
 	<li>Native Heroes: Hunter, Druid</li>
-	<li><em>Updates:</em> Dendroids way down to 2, Dwarves to 4 & Pegasi to 5.</li>
+	<li><em>Updates:</em> Dendroids out, Halflings in, Centaurs to 2, Dwarves to 3, Elves to 4 & Pegasi to 5.</li>
 	<li>Ultimate: Spirit Guardian - +2 Luck to all native allied heroes, +1 to other allied heroes. Raises luck cap
 			to +4 at Mas Luck instead of GM.</li>
 	<li><strong>Uniques</strong></li>
-	<li>Centaur Paddock: +6/wk Centaur growth, requires Centaur Stables, 500g5w</li>
-	<li>Dwarven Bunks: +3/wk Dwarf growth, requires Dwarf Cottage, Blacksmith Guild, 1000g5o</li>
+	<li>Centaur Paddock: +4/wk Centaur growth, requires Centaur Stables, 500g5w</li>
+	<li>Archery Range: +2/wk Elf Archer growth, requires Elf Cottage, Timber Guild, 1000g5o</li>
 	<li>Timber Guild: up to +2 wood from lumber mills/day (+1 per lumber mill per Timber Guild, each lumber mill can be
-			boosted to a max of 4/day), 2000g+5w</li>
+			boosted to a max of 4/day), requires City Hall, 2000g+5w</li>
 	<li>Precious Stockpile: +10% interest on selected resource at the start of the week, must be chosen before day 7,
-	    5000g3c3g3s3m5o5w</li>
+			requires City Hall + Dwarf Cottage, 5000g3c3g3s3m5o5w</li>
 	<li><strong>Dwellings</strong></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
-	<li></li>
+	<li>Halfling Hole</li>
+	<li>Centaur Stables</li>
+	<li>Dwarf Bunks</li>
+	<li>Elf Cottage</li>
+	<li>Pegasi Pond</li>
+	<li>Unicorn Glade</li>
+	<li>Dragon Cliff</li>
 </ul>
 <h4>Creatures</h4>
 <ol>
 	<li>Halfling Slingers/Halfling Guerillas (ranged, tougher than H3C)</li>
 	<li>Centaur Lancers/Centaur Stampeders (jousting bonus)</li>
 	<li>Dwarven Warriors (ranged attacks/spells downgraded 1 Crit category (2 when defensive stance taken))</li>
-	<li>Elf Archers/Elf Rangers (ranged, 24 shots, both shoot 2x per turn)</li>
-	<li>Pegasus Fencers/Pegasus Cuirassiers (magic damping, upg. has strike-and-return (alt))</li>
-	<li>Unicorns/War Unicorns (aura of magic resist to army, chance to Pacify1 on atk (upg. Pacify2))</li>
+	<li>Elf Archers/Elf Rangers (ranged, 24 shots, both shoot 2x per turn, upg. +1 luck floor)</li>
+	<li>Pegasus Fencers/Pegasus Cuirassiers (jousting bonus, upg. has strike-and-return (alt can strike & stay))</li>
+	<li>Unicorns/War Unicorns (aura of magic resist to army, chance to Vision1 on atk (upg. Pacify2))</li>
 	<li>Green Dragons/Gold Dragons (Flying, breath atk (alt), high magic resistance (upg. very high))</li>
 </ol>
 <h3>Tower</h3>
@@ -259,7 +259,7 @@
 <ol>
 	<li>Sprites</li>
 	<li>Air - Wisps (fastish frail high dmg); Water - Tritons (medium speed sturdy melee); Fire - Salamanders (medium
-			speed tankyish melee); Earth - Rock Beasts (new, doglike, medium fast, tanky, technical but lower damage)</li>
+			speed tankyish melee); Earth - Rock Beasts (new, doglike, medium fast, semi-tanky, technical + damage)</li>
 	<li>Air - Hawkppl (medium fast sturdier ranged (throw axes)); Water - Acid Spitters (new, ranged, med dmg technical);
 			Fire - Warden of Fire (Use MM7 name but separate from Elementals, new design, ranged); Earth - Boulders
 			(immovable semi frail 2hex high aoe-damage ranged)</li>
