--- a/Races.html
+++ b/Races.html
@@ -41,9 +41,11 @@
   <li>Halfling</li>
   <li>Troll</li>
   <li>Wolfman (were-hybrid)</li>
-  <li>Ratman(were-hybrid)</li>
+  <li>Ratman (were-hybrid)</li>
 </ul>
 <h3>Beasts / Non-Humanoid</h3>
+<p>Strongly considering having humanform versions of some if not all of these for playable characters, because honestly
+   it'd be fun as hell. Lot of artistic & lore work needed for that though.</p>
 <ul>
   <li>Griffin</li>
   <li>Pegasus</li>
@@ -68,6 +70,7 @@
   <li>Bat</li>
   <li>Ooze</li>
   <li>Spider</li>
+  <li>Snake</li>
   <li>Shark</li>
   <li>Couatl</li>
   <li>Wolf</li>
