--- a/Overview.html
+++ b/Overview.html
@@ -16,6 +16,7 @@
   <li><a href="Skills.html">Skills & Stats</a></li>
   <li><a href="Spells.html">Spells</a></li>
   <li><a href="Races.html">Races & Classes</a></li>
+  <li><a href="Crafting.html">Crafting System</a></li>
 </ul>
 </body>
 </html>
